<resources>
    <string name="app_name">Care Buddy Nurse</string>
    <string name="login">Login</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="sign_out">Sign Out</string>
    <string name="home">Home</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="age">Age</string>
    <string name="confirmPassword">Confirm Password</string>
    <string name="signup">Sign Up</string>
    <string name="tell_about_yourself">Tell about yourself</string>
    <string name="qualifications">Qualifications</string>
    <string name="experience">Experience</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome!"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="specialities">Specialities</string>
    <string name="in_years">(in years)</string>
    <string name="chat">Chat</string>
    <string name="title_activity_chat">ChatActivity</string>
</resources>