<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.MainActivity">

    <TextView
        android:id="@+id/text_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login"
        android:textSize="25sp"
        android:textColor="@color/black"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_margin="16dp"
        app:layout_constraintStart_toStartOf="parent"
        tools:layout_editor_absoluteY="25dp" />

    <com.google.android.material.card.MaterialCardView

        android:id="@+id/cv_loginError"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginTop="30dp"
        app:cardCornerRadius="4dp"
        android:visibility="invisible"
        android:padding="15dp"
        app:strokeColor="@color/purple_200"
        app:strokeWidth="1dp"
        style="@style/Widget.Material3.CardView.Filled"
        app:layout_constraintTop_toBottomOf="@id/text_login"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:layout_editor_absoluteY="94dp">

        <TextView
            android:id="@+id/tv_loginError"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:textSize="12sp"
            android:textColor="#FB4A4A"
            android:textAlignment="center"
            android:layout_margin="10dp"/>

    </com.google.android.material.card.MaterialCardView>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/inputLayoutEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintTop_toBottomOf="@id/cv_loginError"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="40dp">

        <EditText
            android:id="@+id/et_email"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/email"
            android:textSize="18sp"
            android:inputType="textEmailAddress"
            style="@style/Widget.Material3.TextInputLayout.OutlinedBox"/>

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/inputLayoutPass"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintTop_toBottomOf="@id/inputLayoutEmail"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="40dp">

        <EditText
            android:id="@+id/et_password"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/password"
            android:textSize="18sp"
            android:inputType="textPassword"
            style="@style/Widget.Material3.TextInputLayout.OutlinedBox"/>

    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/bt_nurseLogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login"
        android:textSize="18sp"
        app:layout_constraintTop_toBottomOf="@id/inputLayoutPass"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="60dp"
        tools:layout_editor_absoluteX="141dp"
        tools:layout_editor_absoluteY="298dp" />

</androidx.constraintlayout.widget.ConstraintLayout>